kubernates/ewm-client-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ewm-client-deployment
  labels:
    app: ewm-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ewm-client
  template:
    metadata:
      labels:
        app: ewm-client
    spec:
      containers:
        - name: stats-service
          image: glazyrinalexey/java-explore-with-me-ewm-client:ewm-client
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ewm-client
spec:
  selector:
    app: ewm-client
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
