kubernates/ewm-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ewm-service-deployment
  labels:
    app: ewm-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ewm-service
  template:
    metadata:
      labels:
        app: ewm-service
    spec:
      containers:
        - name: ewm-service
          image: glazyrinalexey/java-explore-with-me-ewm-service:ewm-service
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ewm-service-service
spec:
  selector:
    app: ewm-service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
