kubernates/stats-client-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-client-deployment
  labels:
    app: stats-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-client
  template:
    metadata:
      labels:
        app: stats-client
    spec:
      containers:
        - name: stats-service
          image: glazyrinalexey/stats-client:stats-client
          ports:
            - containerPort: 9090
---
apiVersion: v1
kind: Service
metadata:
  name: stats-client-service
spec:
  selector:
    app: stats-client
  ports:
    - protocol: TCP
      port: 9090
      targetPort: 9090
