kubernates/stats-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stats-service-deployment
  labels:
    app: stats-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stats-service
  template:
    metadata:
      labels:
        app: stats-service
    spec:
      containers:
        - name: stats-service
          image:
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: stats-service-service
spec:
  selector:
    app: stats-service
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
